initial velocity for fire bug #43515

Closed
opened 2015-02-01 15:44:15 +01:00 by Ronny G · 8 comments

System Information
ubuntu 14.04, 630gt

Blender Version
Broken: 26f9a92

Short description of error

it seems initial velocity for fire lags 1 frame behind

images:

smoke (initial velocity 0.5)

initialvelocitysmoke.jpg

fire (initial velocity 0.5)

initialvelocityfire.jpg

both

initialvelocityfiresmoke.jpg

Exact steps for others to reproduce the error

download the file and bake 1 frame

fireinitialvelocity.blend

**System Information** ubuntu 14.04, 630gt **Blender Version** Broken: 26f9a92 **Short description of error** it seems initial velocity for fire lags 1 frame behind images: smoke (initial velocity 0.5) ![initialvelocitysmoke.jpg](https://archive.blender.org/developer/F140265/initialvelocitysmoke.jpg) fire (initial velocity 0.5) ![initialvelocityfire.jpg](https://archive.blender.org/developer/F140267/initialvelocityfire.jpg) both ![initialvelocityfiresmoke.jpg](https://archive.blender.org/developer/F140269/initialvelocityfiresmoke.jpg) **Exact steps for others to reproduce the error** download the file and bake 1 frame [fireinitialvelocity.blend](https://archive.blender.org/developer/F140271/fireinitialvelocity.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nudelZ

Added subscriber: @nudelZ

Added subscribers: @LukasTonne, @genscher, @miikah, @Sergey

Added subscribers: @LukasTonne, @genscher, @miikah, @Sergey

Baking does work, what doesn't work is the "auto" bake on playback.

What does our physics team will say? :)

Baking does work, what doesn't work is the "auto" bake on playback. What does our physics team will say? :)
Author

baking doesnt work here sergey (same result as alt+a)

bake

alta.png

alt+a

baked.png

inital velocity off

iveloff.png

baking doesnt work here sergey (same result as alt+a) bake ![alta.png](https://archive.blender.org/developer/F140631/alta.png) alt+a ![baked.png](https://archive.blender.org/developer/F140633/baked.png) inital velocity off ![iveloff.png](https://archive.blender.org/developer/F140635/iveloff.png)
Miika Hamalainen self-assigned this 2015-02-06 20:44:30 +01:00

This issue was referenced by ca06c3343e

This issue was referenced by ca06c3343e4c295029a74ffdbafbed1b8a7911ec

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ca06c3343e.

Closed by commit ca06c3343e.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43515
No description provided.